urlパラメータチェック機能追加

--- a/T-CHAT-Post/T-CHAT-Post.html
+++ b/T-CHAT-Post/T-CHAT-Post.html
@@ -112,9 +112,9 @@
               <option value="7">HTML</option>
               <option value="8">If文</option>
               <option value="9">For文</option>
-              <option value="10">10月</option>
-              <option value="11">11月</option>
-              <option value="12">12月</option>
+              <option value="10">就職活動</option>
+              <option value="11">インターンシップ</option>
+              <option value="12">AWS</option>
             </select>
 
             <script>
