--- a/T-CHAT-Home.html
+++ b/T-CHAT-Home.html
@@ -18,6 +18,9 @@
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplebar/6.2.5/simplebar.min.css" />
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/simplebar/6.2.5/simplebar.min.js"></script>
+
+  <meta name="viewport" content="width=device-width,initial-scale=1"> 
+  <!-- PCやモバイル（スマホ、タブレット）などデバイスごとにコンテンツの表示領域を設定するためのHTML属性値 -->
 </head>
 
 <body>
