--- a/T-CHAT-Home.html
+++ b/T-CHAT-Home.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplebar/6.2.5/simplebar.min.css" />
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/simplebar/6.2.5/simplebar.min.js"></script>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1"> 
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <!-- PCやモバイル（スマホ、タブレット）などデバイスごとにコンテンツの表示領域を設定するためのHTML属性値 -->
 </head>
 
@@ -130,7 +130,9 @@
             <section>
               <h3>tomioka</h3>
               <h1>投稿日：2023年10月25日</h1>
-              <article>Firebaseのバグが消えません 助けてください</article>
+              <a href="T-CHAT-Detail/T-CAHT-tome.html" class="article">
+                <article>Firebaseのバグが消えません 助けてください</article>
+              </a>
               <span class="article-category">Firebase</span>
               <span class="article-category">Android</span>
               <span class="article-category">Bug</span>
@@ -143,9 +145,11 @@
             <section>
               <h3>shunsuke</h3>
               <h1>投稿日：2023年10月25日</h1>
-              <article>
-                トライデントコンピュータの校舎が変わるってほんと？
-              </article>
+              <a href="T-CHAT-Detail/T-CAHT-shun.html" class="article">
+                <article>
+                  トライデントコンピュータの校舎が変わるってほんと？
+                </article>
+              </a>
               <span class="article-category">Java</span>
               <span class="answered-category">解決</span>
               <span class="answers3">回答数：1件</span>
