--- a/T-CHAT-Question/T-CHAT-Question copy.html
+++ b/T-CHAT-Question/T-CHAT-Question copy.html
@@ -52,21 +52,25 @@
         <a class="Category">Category</a>
 
         <div class="category1">
-          <a href="#" class="unsolved">未回答</a>
+          <button type="button" id="unsolved" class="unsolved">未回答</button>
         </div>
 
         <div class="category2">
-          <a href="#" class="Notanswered">未解決</a>
+          <button type="button" id="Notanswered" class="Notanswered">未解決</button>
         </div>
 
         <div class="category3">
-          <a href="#" class="answered">解決</a>
+          <button type="button" id="answered" class="answered">解決</button>
+        </div>
+
+        <div class="category4">
+          <button type="button" id="full" class="full">全て表示</button>
         </div>
       </aside>
 
       <main>
         <div class="scroll-area" data-simplebar data-simplebar-auto-hide="false">
-          <div class="box1">
+          <div id="box1" class="box1">
             <section>
               <h3>MIZUNO</h3>
               <h1>投稿日：2023年10月25日</h1>
@@ -80,7 +84,7 @@
               </div>
             </section>
           </div>
-          <div class="box2">
+          <div id="box2" class="box2">
             <section>
               <h3>tomioka</h3>
               <h1>投稿日：2023年10月25日</h1>
@@ -95,7 +99,7 @@
               </div>
             </section>
           </div>
-          <div class="box3">
+          <div id="box3" class="box3">
             <section>
               <h3>shunsuke</h3>
               <h1>投稿日：2023年10月25日</h1>
@@ -113,7 +117,7 @@
   </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="T-CHAT-Home.js"></script>
+  <script src="T-CHAT-Question.js"></script>
 </body>
 
 </html>
