--- a/T-CHAT-Detail/T-CHAT-Temp.html
+++ b/T-CHAT-Detail/T-CHAT-Temp.html
@@ -13,8 +13,6 @@
       href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500&family=Sawarabi+Gothic&display=swap"
       rel="stylesheet"
     />
-    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-firestore.js"></script>
   </head>
 
   <body>
@@ -64,62 +62,7 @@
 
       <main>
         <div class="box1">
-          <section class="">
-            <p class="name">MIZUNO</p>
-            <p class="date">2023年10月25日</p>
-            <p class="large">アプリ案が思いつかなくて困っています</p>
-            <span class="article-category">アプリ案</span>
-            <span class="unsolved-category">未解決</span>
-            <div class="answer5">
-              <span class="total">回答数１</span>
-            </div>
-
-            <p class="border"></p>
-            <p class="text-medium">1.アプリ案が思いつかない</p>
-            <p class="text-Extremely-small">
-              授業内でアプリ企画を二つ考えなければいけません正直無理です。助けてほしいです。
-            </p>
-            <p class="text-small">1.1候補案</p>
-            <p class="text-Extremely-small">
-              一応候補となる案は出ています。ルーレットを回し行きたい店を決めるアプリやchatbotを活用したアプリです。
-            </p>
-            <p class="text-small">1.必須要綱</p>
-            <p class="text-Extremely-small">
-              androidアプリかつWEB APIを必ず使うこと。
-            </p>
-            <p class="border"></p>
-            <p class="text-medium">2.疑問点</p>
-            <p class="text-Extremely-small">
-              アプリ開発で大量の疑問点を抱えています。タスケテ....
-            </p>
-            <p class="text-small">2.1企画発表は2案か</p>
-            <p class="text-Extremely-small">
-              実際に企画発表をする案は二ついるのでしょうか。そこをお聞きしたいです。
-            </p>
-            <p class="large">3.回答者へのお願い</p>
-            <p class="text-Extremely-small">
-              前述した質問内容を答えていただきたいです。よろしくお願いいたします。
-            </p>
-            <p class="border"></p>
-            <p class="large">1件の回答</p>
-          </section>
-          <section class="response">
-            <p class="name">Tomi</p>
-            <p class="date">2023年11月25日</p>
-            <p class="reply">
-              2.1企画発表は2案か<br />実際に企画発表をする案は二ついるのでしょうか。そこをお聞きしたいです。
-            </p>
-          </section>
-
-          <section class="answer">
-            <input
-              class="text"
-              type="text"
-              name="名前"
-              value=""
-              placeholder="名前を入力してください"
-            />
-
+          <section class=""><div id="display-container"></div></section>
             <section class="answer">
               <div class="element">
                 <!-- カスタムファイルアップロードボタンのラッパー -->
