スマホ画面

--- a/T-CHAT-Home.html
+++ b/T-CHAT-Home.html
@@ -23,7 +23,7 @@
   <!-- PCやモバイル（スマホ、タブレット）などデバイスごとにコンテンツの表示領域を設定するためのHTML属性値 -->
 </head>
 
-<body>
+<body id="body">
   <div class="background">
     <header>
       <div class="logo">
