スマホ画面再コミット

--- a/T-CHAT-Home.html
+++ b/T-CHAT-Home.html
@@ -147,7 +147,7 @@
               <h1>投稿日：2023年10月25日</h1>
               <a href="T-CHAT-Detail/T-CHAT-shun.html" class="article">
                 <article>
-                  トライデントコンピュータの校舎が変わるってほんと？
+                  トライデントコンピュータの校舎が変わるってほんとなの？
                 </article>
               </a>
               <span class="article-category">Java</span>
