--- a/T-CHAT-Detail/T-CHAT-Temp.html
+++ b/T-CHAT-Detail/T-CHAT-Temp.html
@@ -64,6 +64,8 @@
 
       <main>
         <div class="box1">
+          <div id = "post-element"></div>
+          <p class="border"></p>
           <div id="display-container"></div>
             <section class="answer">
               <div class="element">
