かなりの変更

--- a/T-CHAT-Detail/T-CHAT-Temp.html
+++ b/T-CHAT-Detail/T-CHAT-Temp.html
@@ -67,7 +67,15 @@
           <div id = "post-element"></div>
           <p class="border"></p>
           <div id="display-container"></div>
-            <section class="answer">
+          <p class="border"></p>
+          <p class="large">0件の回答</p>
+          <section class="response">
+            <!-- <p class="name"></p>
+            <p class="date"></p>
+            <p class="reply">
+            </p> -->
+          </section>
+            <section class="answer-form">
               <div class="element">
                 <!-- カスタムファイルアップロードボタンのラッパー -->
                 <div class="custom-upload-button">
