Post修正 Homeタグパラメータ付与＆整列

--- a/T-CHAT-Detail/T-CHAT-Temp.html
+++ b/T-CHAT-Detail/T-CHAT-Temp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <link rel="stylesheet" type="text/css" href="T-CHAT-Detail.css" />
+    <link rel="stylesheet" type="text/css" href="T-CHAT-Temp.css" />
     <meta charset="utf-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -75,6 +75,7 @@
             <p class="reply">
             </p> -->
           </section>
+          <p class="border"></p>
             <section class="answer-form">
               <div class="element">
                 <!-- カスタムファイルアップロードボタンのラッパー -->
