くそ進んだ　脳汁やべぇ

--- a/T-CHAT-Detail/T-CHAT-Temp.html
+++ b/T-CHAT-Detail/T-CHAT-Temp.html
@@ -63,7 +63,7 @@
       </header>
 
       <main>
-        <div class="box1">
+        <div class="box">
           <div id = "post-element"></div>
           <p class="border"></p>
           <div id="display-container"></div>
