Trend機能　一応完成

--- a/T-CHAT-Home.html
+++ b/T-CHAT-Home.html
@@ -82,64 +82,7 @@
       </header>
 
       <div class="container">
-        <aside>
-          <div class="item-list">
-            <div class="head">📈 Trend</div>
-          </div>
-
-          <div class="item-list">
-            <h4>
-              <a href="index.html"
-                ><img src="./T-CHAT-Image/no1.png" alt="サイトロゴ"
-              /></a>
-            </h4>
-            <div class="item">Bug</div>
-          </div>
-          <div class="item-list">
-            <h4>
-              <a href="index.html"
-                ><img src="./T-CHAT-Image/no2.png" alt="サイトロゴ"
-              /></a>
-            </h4>
-            <div class="item">Firebase</div>
-          </div>
-          <div class="item-list">
-            <h4>
-              <a href="index.html"
-                ><img src="./T-CHAT-Image/no3.png" alt="サイトロゴ"
-              /></a>
-            </h4>
-            <div class="item">Java</div>
-          </div>
-          <div class="item-list">
-            <div class="rank">4</div>
-            <div class="item">News</div>
-          </div>
-          <div class="item-list">
-            <div class="rank">5</div>
-            <div class="item">Android</div>
-          </div>
-          <div class="item-list">
-            <div class="rank">6</div>
-            <div class="item">JavaScript</div>
-          </div>
-          <div class="item-list">
-            <div class="rank">7</div>
-            <div class="item">HTML</div>
-          </div>
-          <div class="item-list">
-            <div class="rank">8</div>
-            <div class="item">アプリ案</div>
-          </div>
-          <div class="item-list">
-            <div class="rank">9</div>
-            <div class="item">If文</div>
-          </div>
-          <div class="item-list">
-            <div class="rank">10</div>
-            <div class="item">For文</div>
-          </div>
-        </aside>
+        <aside></aside>
 
         <main>
           <div
