回答フォームほぼ完成

--- a/T-CHAT-Detail/T-CHAT-Temp.html
+++ b/T-CHAT-Detail/T-CHAT-Temp.html
@@ -76,10 +76,10 @@
           <p class="border"></p>
           <p class="large">0件の回答</p>
           <section class="response">
-            <!-- <p class="name"></p>
+            <p class="name"></p>
             <p class="date"></p>
             <p class="reply">
-            </p> -->
+            </p>
           </section>
           <p class="border"></p>
           <p class="comment">コメントする</p>
