コミットです

--- a/T-CHAT-Detail/T-CHAT-Temp.html
+++ b/T-CHAT-Detail/T-CHAT-Temp.html
@@ -74,13 +74,16 @@
           <p class="border"></p>
           <div id="display-container"></div>
           <p class="border"></p>
-          <p class="large">0件の回答</p>
-          <section class="response">
+          <p class="ans-count"></p>
+          <section class="responses">
+            <!-- ここに動的に回答が追加されます -->
+          </section>          
+          <!-- <section class="response">
             <p class="name"></p>
             <p class="date"></p>
             <p class="reply">
             </p>
-          </section>
+          </section> -->
           <p class="border"></p>
           <p class="comment">コメントする</p>
             <section class="answer-form">
