--- a/T-CHAT-Home.html
+++ b/T-CHAT-Home.html
@@ -31,7 +31,7 @@
     <!-- PCやモバイル（スマホ、タブレット）などデバイスごとにコンテンツの表示領域を設定するためのHTML属性値 -->
   </head>
 
-  <body id="body">
+  <body id="body" style="display: none">
     <div class="background">
       <header>
         <div class="logo">
@@ -99,7 +99,7 @@
                 </a>
                 <span class="article-category">アプリ案</span>
                 <span class="unsolved-category">未回答</span>
-                <span class="answers1">回答数：1件</span>
+                <span class="answers-num">回答数：1件</span>
               </section>
             </div>
             <div class="box2">
@@ -113,7 +113,7 @@
                 <span class="article-category">Android</span>
                 <span class="article-category">Bug</span>
                 <span class="Notanswered-category">未解決</span>
-                <span class="answers2">回答数：1件</span>
+                <span class="answers-num">回答数：1件</span>
               </section>
             </div>
             <div class="box3">
@@ -127,7 +127,7 @@
                 </a>
                 <span class="article-category">Java</span>
                 <span class="answered-category">解決</span>
-                <span class="answers3">回答数：1件</span>
+                <span class="answers-num">回答数：1件</span>
               </section>
             </div>
             <div id="add-element"></div>
