--- a/T-CHAT-Post/T-CHAT-Post.html
+++ b/T-CHAT-Post/T-CHAT-Post.html
@@ -81,9 +81,9 @@
           <div class="box1">
             <select class="list" name="名前" size="1" id="format">
               <option selected="selected" hidden>選択して下さい</option>
-              <option value="private">プライベート</option>
-              <option value="change">意見交換</option>
-              <option value="QA">Q & A</option>
+              <option value="プライベート">プライベート</option>
+              <option value="意見交換">意見交換</option>
+              <option value="Q＆A">Q & A</option>
             </select>
             <input
               class="text"
