ディテール編集（返信ボタン）

--- a/T-CHAT-Detail/T-CHAT-Temp.html
+++ b/T-CHAT-Detail/T-CHAT-Temp.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <link rel="stylesheet" type="text/css" href="T-CHAT-Temp.css" />
+    
     <meta charset="utf-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -84,6 +85,15 @@
             <p class="reply">
             </p>
           </section> -->
+          <div class="comment" id="comment1">
+            <input
+              type="text"
+              id="replyButton1"
+              placeholder="コメントする..."
+              onclick="replyToComment(1)"
+            />
+            <div id="replyFormContainer1"></div>
+          </div>
           <p class="border"></p>
           <p class="comment">コメントする</p>
             <section class="answer-form">
