なにしてたっけ

--- a/T-CHAT-Home.html
+++ b/T-CHAT-Home.html
@@ -35,17 +35,13 @@
     <div class="background">
       <header>
         <div class="logo">
-          <a href="T-CHAT-Home.html" class="home"
-            ><img src="./T-CHAT-Image/T-CHAT_icon.png"
-          /></a>
+          <a class="home-icon"><img src="./T-CHAT-Image/T-CHAT_icon.png" /></a>
         </div>
 
         <nav>
           <ul>
-            <a href="T-CHAT-Home.html" class="home">🏡Home</a>
-            <a href="./T-CHAT-Question/T-CHAT-Question.html" class="question"
-              >💡Question</a
-            >
+            <a class="home">🏡Home</a>
+            <a class="question">💡Question</a>
             <div class="search-form">
               <input
                 type="text"
@@ -90,7 +86,7 @@
             data-simplebar
             data-simplebar-auto-hide="false"
           >
-            <div class="box1">
+            <!-- <div class="box1">
               <section>
                 <h3>MIZUNO</h3>
                 <h1>投稿日：2023年10月25日</h1>
@@ -129,7 +125,7 @@
                 <span class="answered-category">解決</span>
                 <span class="answers-num">回答数：1件</span>
               </section>
-            </div>
+            </div> -->
             <div id="add-element"></div>
           </div>
         </main>
