null質問内容以外完了

--- a/T-CHAT-Post/T-CHAT-Post.html
+++ b/T-CHAT-Post/T-CHAT-Post.html
@@ -78,7 +78,7 @@
         <main>
           <div class="box1">
             <select class="list" name="名前" size="1" id="format">
-              <option selected="selected" hidden>選択して下さい</option>
+              <option value='' disabled selected style='display:none;'>選択して下さい</option>
               <option value="プライベート">プライベート</option>
               <option value="意見交換">意見交換</option>
               <option value="Q＆A">Q & A</option>
