やばい思ったより時間かかる

--- a/T-CHAT-Post/T-CHAT-Post.html
+++ b/T-CHAT-Post/T-CHAT-Post.html
@@ -78,7 +78,9 @@
         <main>
           <div class="box1">
             <select class="list" name="名前" size="1" id="format">
-              <option value='' disabled selected style='display:none;'>選択して下さい</option>
+              <option value="" disabled selected style="display: none">
+                選択して下さい
+              </option>
               <option value="プライベート">プライベート</option>
               <option value="意見交換">意見交換</option>
               <option value="Q＆A">Q & A</option>
@@ -107,17 +109,6 @@
                       class="3col active form-control"
                       id="question_tag"
                     >
-                      <option value="AL">アプリ案</option>
-                      <option value="AM">初心者</option>
-                      <option value="AN">初心者向け</option>
-                      <option value="AK">Android</option>
-                      <option value="AZ">Bug</option>
-                      <option value="AR">Firebase</option>
-                      <option value="CA">For文</option>
-                      <option value="CO">HTML</option>
-                      <option value="CT">If文</option>
-                      <option value="DE">Java</option>
-                      <option value="FL">News</option>
                       <option value="GA">1月</option>
                       <option value="HI">2月</option>
                       <option value="ID">3月</option>
@@ -130,35 +121,46 @@
                       <option value="ME">10月</option>
                       <option value="MD">11月</option>
                       <option value="MA">12月</option>
-                      <!-- <option value="MI">Michigan</option>
-                      <option value="MN">Minnesota</option>
-                      <option value="MS">Mississippi</option>
-                      <option value="MO">Missouri</option>
-                      <option value="MT">Montana</option>
-                      <option value="NE">Nebraska</option>
-                      <option value="NV">Nevada</option>
-                      <option value="NH">New Hampshire</option>
-                      <option value="NJ">New Jersey</option>
-                      <option value="NM">New Mexico</option>
-                      <option value="NY">New York</option>
-                      <option value="NC">North Carolina</option>
-                      <option value="ND">North Dakota</option>
-                      <option value="OH">Ohio</option>
-                      <option value="OK">Oklahoma</option>
-                      <option value="OR">Oregon</option>
-                      <option value="PA">Pennsylvania</option>
-                      <option value="RI">Rhode Island</option>
-                      <option value="SC">South Carolina</option>
-                      <option value="SD">South Dakota</option>
-                      <option value="TN">Tennessee</option>
-                      <option value="TX">Texas</option>
-                      <option value="UT">Utah</option>
-                      <option value="VT">Vermont</option>
-                      <option value="VA">Virginia</option>
-                      <option value="WA">Washington</option>
-                      <option value="WV">West Virginia</option>
-                      <option value="WI">Wisconsin</option>
-                      <option value="WY">Wyoming</option> -->
+                      <option value="MI">就職活動</option>
+                      <option value="MN">インターンシップ</option>
+                      <option value="MS">情報処理学科</option>
+                      <option value="MO">キャリアプロ学科</option>
+                      <option value="MT">高度情報学科</option>
+                      <option value="NE">サイバーセキュリティ学科</option>
+                      <option value="NV">1年生</option>
+                      <option value="NH">2年生</option>
+                      <option value="NJ">3年生</option>
+                      <option value="NM">4年生</option>
+                      <option value="AL">アプリ案</option>
+                      <option value="AM">初心者</option>
+                      <option value="AN">開発</option>
+                      <option value="AK">Android</option>
+                      <option value="AZ">Java</option>
+                      <option value="AR">C言語</option>
+                      <option value="CA">C++</option>
+                      <option value="CO">JavaScript</option>
+                      <option value="CT">Node.js</option>
+                      <option value="DE">jQuery</option>
+                      <option value="FL">Vue.js</option>
+                      <option value="NY">React.js</option>
+                      <option value="NC">Swift</option>
+                      <option value="ND">iOS</option>
+                      <option value="OH">iPhone</option>
+                      <option value="OK">Linux</option>
+                      <option value="OR">CentOS</option>
+                      <option value="PA">Ubuntu</option>
+                      <option value="RI">PaspberryPi</option>
+                      <option value="SC">機械学習</option>
+                      <option value="SD">Firebase</option>
+                      <option value="TN">MySQL</option>
+                      <option value="TX">Database</option>
+                      <option value="UT">Excel</option>
+                      <option value="VT">PowerPoint</option>
+                      <option value="VA">Word</option>
+                      <option value="WA">AWS</option>
+                      <option value="WV">API</option>
+                      <option value="WI">OpenCV</option>
+                      <option value="WY">JSON</option>
                     </select>
                   </div>
                 </div>
