POSTのタグ追加しました

--- a/T-CHAT-Post/T-CHAT-Post.html
+++ b/T-CHAT-Post/T-CHAT-Post.html
@@ -161,6 +161,85 @@
                       <option value="WV">API</option>
                       <option value="WI">OpenCV</option>
                       <option value="WY">JSON</option>
+                      <option value="WY">Ruby</option>
+                      <option value="WY">Git</option>
+                      <option value="WY">TypeScript</option>
+                      <option value="WY">CSS</option>
+                      <option value="WY">GitHub</option>
+                      <option value="WY">DeepLearning</option>
+                      <option value="WY">Kotlin</option>
+                      <option value="WY">Flutter</option>
+                      <option value="WY">ポエム</option>
+                      <option value="WY">lambda</option>
+                      <option value="WY">PostgreSQL</option>
+                      <option value="WY">WordPress</option>
+                      <option value="WY">EC2</option>
+                      <option value="WY">docker-compose</option>
+                      <option value="WY">Salesforce</option>
+                      <option value="WY">Arduino</option>
+                      <option value="WY">ShellScript</option>
+                      <option value="WY">Windows10</option>
+                      <option value="WY">Vagrant</option>
+                      <option value="WY">GoogleAppsScript</option>
+                      <option value="WY">初心者向け</option>
+                      <option value="WY">Rust</option>
+                      <option value="WY">PowerShell</option>
+                      <option value="WY">Objective-C</option>
+                      <option value="WY">IoT</option>
+                      <option value="WY">競技プログラミング</option>
+                      <option value="WY">HTML5</option>
+                      <option value="WY">Angular</option>
+                      <option value="WY">MachineLearning</option>
+                      <option value="WY">Chrome</option>
+                      <option value="WY">AWS</option>
+                      <option value="WY">PHP</option>
+                      <option value="WY">Unity</option>
+                      <option value="WY">Mac</option>
+                      <option value="WY">Go</option>
+                      <option value="WY">機械学習</option>
+                      <option value="WY">RaspberryPi</option>
+                      <option value="WY">Azure</option>
+                      <option value="WY">googlecloud</option>
+                      <option value="WY">Django</option>
+                      <option value="WY">Security</option>
+                      <option value="WY">AtCoder</option>
+                      <option value="WY">R</option>
+                      <option value="WY">Vim</option>
+                      <option value="WY">ChatGPT</option>
+                      <option value="WY">Elixir</option>
+                      <option value="WY">nginx</option>
+                      <option value="WY">SpringBoot</option>
+                      <option value="WY">AI</option>
+                      <option value="WY">新人プログラマ応援</option>
+                      <option value="WY">TensorFlow</option>
+                      <option value="WY">SSH</option>
+                      <option value="WY">OpenCV</option>
+                      <option value="WY">S3</option>
+                      <option value="WY">#migrated</option>
+                      <option value="WY">AndroidStudio</option>
+                      <option value="WY">プログラミング</option>
+                      <option value="WY">Next.js</option>
+                      <option value="WY">Rails</option>
+                      <option value="WY">Docker</option>
+                      <option value="WY">iOS</option>
+                      <option value="WY">Laravel</option>
+                      <option value="WY">メモ</option>
+                      <option value="WY">テスト</option>
+                      <option value="WY">kubernetes</option>
+                      <option value="WY">jQuery</option>
+                      <option value="WY">Bash</option>
+                      <option value="WY">Heroku</option>
+                      <option value="WY">Slack</option>
+                      <option value="WY">Nuxt</option>
+                      <option value="WY">oracle</option>
+                      <option value="WY">pandas</option>
+                      <option value="WY">Apache</option>
+                      <option value="WY">Scala</option>
+                      <option value="WY">centos7</option>
+                      <option value="WY">VBA</option>
+                      <option value="WY">Ansible</option>
+                      <option value="WY">VirtualBox</option>
+                      <option value="WY">npm</option>
                     </select>
                   </div>
                 </div>
