home画面携帯版監修中

--- a/T-CHAT-Detail/T-CHAT-Temp.html
+++ b/T-CHAT-Detail/T-CHAT-Temp.html
@@ -85,15 +85,14 @@
             <p class="reply">
             </p>
           </section> -->
-          <div class="comment" id="comment1">
+          <!-- <div class="comment" id="comment1">
             <input
               type="text"
-              id="replyButton1"
+              id="replyButton"
               placeholder="コメントする..."
-              onclick="replyToComment(1)"
             />
             <div id="replyFormContainer1"></div>
-          </div>
+          </div>  -->
           <p class="border"></p>
           <p class="comment">コメントする</p>
             <section class="answer-form">
