おコミット

--- a/T-CHAT-Post/T-CHAT-Post.html
+++ b/T-CHAT-Post/T-CHAT-Post.html
@@ -160,86 +160,86 @@
                       <option value="WA">AWS</option>
                       <option value="WV">API</option>
                       <option value="WI">OpenCV</option>
-                      <option value="WY">JSON</option>
-                      <option value="WY">Ruby</option>
-                      <option value="WY">Git</option>
-                      <option value="WY">TypeScript</option>
-                      <option value="WY">CSS</option>
-                      <option value="WY">GitHub</option>
-                      <option value="WY">DeepLearning</option>
-                      <option value="WY">Kotlin</option>
-                      <option value="WY">Flutter</option>
-                      <option value="WY">ポエム</option>
-                      <option value="WY">lambda</option>
-                      <option value="WY">PostgreSQL</option>
-                      <option value="WY">WordPress</option>
-                      <option value="WY">EC2</option>
-                      <option value="WY">docker-compose</option>
-                      <option value="WY">Salesforce</option>
-                      <option value="WY">Arduino</option>
-                      <option value="WY">ShellScript</option>
-                      <option value="WY">Windows10</option>
-                      <option value="WY">Vagrant</option>
-                      <option value="WY">GoogleAppsScript</option>
-                      <option value="WY">初心者向け</option>
-                      <option value="WY">Rust</option>
-                      <option value="WY">PowerShell</option>
-                      <option value="WY">Objective-C</option>
-                      <option value="WY">IoT</option>
-                      <option value="WY">競技プログラミング</option>
-                      <option value="WY">HTML5</option>
-                      <option value="WY">Angular</option>
-                      <option value="WY">MachineLearning</option>
-                      <option value="WY">Chrome</option>
-                      <option value="WY">AWS</option>
-                      <option value="WY">PHP</option>
-                      <option value="WY">Unity</option>
-                      <option value="WY">Mac</option>
-                      <option value="WY">Go</option>
-                      <option value="WY">機械学習</option>
-                      <option value="WY">RaspberryPi</option>
-                      <option value="WY">Azure</option>
-                      <option value="WY">googlecloud</option>
-                      <option value="WY">Django</option>
-                      <option value="WY">Security</option>
-                      <option value="WY">AtCoder</option>
-                      <option value="WY">R</option>
-                      <option value="WY">Vim</option>
-                      <option value="WY">ChatGPT</option>
-                      <option value="WY">Elixir</option>
-                      <option value="WY">nginx</option>
-                      <option value="WY">SpringBoot</option>
-                      <option value="WY">AI</option>
-                      <option value="WY">新人プログラマ応援</option>
-                      <option value="WY">TensorFlow</option>
-                      <option value="WY">SSH</option>
-                      <option value="WY">OpenCV</option>
-                      <option value="WY">S3</option>
-                      <option value="WY">#migrated</option>
-                      <option value="WY">AndroidStudio</option>
-                      <option value="WY">プログラミング</option>
-                      <option value="WY">Next.js</option>
-                      <option value="WY">Rails</option>
-                      <option value="WY">Docker</option>
-                      <option value="WY">iOS</option>
-                      <option value="WY">Laravel</option>
-                      <option value="WY">メモ</option>
-                      <option value="WY">テスト</option>
-                      <option value="WY">kubernetes</option>
-                      <option value="WY">jQuery</option>
-                      <option value="WY">Bash</option>
-                      <option value="WY">Heroku</option>
-                      <option value="WY">Slack</option>
-                      <option value="WY">Nuxt</option>
-                      <option value="WY">oracle</option>
-                      <option value="WY">pandas</option>
-                      <option value="WY">Apache</option>
-                      <option value="WY">Scala</option>
-                      <option value="WY">centos7</option>
-                      <option value="WY">VBA</option>
-                      <option value="WY">Ansible</option>
-                      <option value="WY">VirtualBox</option>
-                      <option value="WY">npm</option>
+                      <option value="WY1">JSON</option>
+                      <option value="WY2">Ruby</option>
+                      <option value="WY3">Git</option>
+                      <option value="WY4">TypeScript</option>
+                      <option value="WY5">CSS</option>
+                      <option value="WY6">GitHub</option>
+                      <option value="WY7">DeepLearning</option>
+                      <option value="WY8">Kotlin</option>
+                      <option value="WY9">Flutter</option>
+                      <option value="WY10">ポエム</option>
+                      <option value="WY11">lambda</option>
+                      <option value="WY12">PostgreSQL</option>
+                      <option value="WY13">WordPress</option>
+                      <option value="WY14">EC2</option>
+                      <option value="WY15">docker-compose</option>
+                      <option value="WY16">Salesforce</option>
+                      <option value="WY17">Arduino</option>
+                      <option value="WY18">ShellScript</option>
+                      <option value="WY19">Windows10</option>
+                      <option value="WY20">Vagrant</option>
+                      <option value="WY21">GoogleAppsScript</option>
+                      <option value="WY22">初心者向け</option>
+                      <option value="WY23">Rust</option>
+                      <option value="WY24">PowerShell</option>
+                      <option value="WY25">Objective-C</option>
+                      <option value="WY26">IoT</option>
+                      <option value="WY27">競技プログラミング</option>
+                      <option value="WY28">HTML5</option>
+                      <option value="WY29">Angular</option>
+                      <option value="WY30">MachineLearning</option>
+                      <option value="WY31">Chrome</option>
+                      <option value="WY32">AWS</option>
+                      <option value="WY33">PHP</option>
+                      <option value="WY34">Unity</option>
+                      <option value="WY35">Mac</option>
+                      <option value="WY36">Go</option>
+                      <option value="WY37">機械学習</option>
+                      <option value="WY38">RaspberryPi</option>
+                      <option value="WY39">Azure</option>
+                      <option value="WY40">googlecloud</option>
+                      <option value="WY41">Django</option>
+                      <option value="WY42">Security</option>
+                      <option value="WY43">AtCoder</option>
+                      <option value="WY44">R</option>
+                      <option value="WY45">Vim</option>
+                      <option value="WY46">ChatGPT</option>
+                      <option value="WY47">Elixir</option>
+                      <option value="WY48">nginx</option>
+                      <option value="WY49">SpringBoot</option>
+                      <option value="WY50">AI</option>
+                      <option value="WY51">新人プログラマ応援</option>
+                      <option value="WY52">TensorFlow</option>
+                      <option value="WY53">SSH</option>
+                      <option value="WY54">OpenCV</option>
+                      <option value="WY55">S3</option>
+                      <option value="WY56">#migrated</option>
+                      <option value="WY57">AndroidStudio</option>
+                      <option value="WY58">プログラミング</option>
+                      <option value="WY59">Next.js</option>
+                      <option value="WY60">Rails</option>
+                      <option value="WY61">Docker</option>
+                      <option value="WY62">iOS</option>
+                      <option value="WY63">Laravel</option>
+                      <option value="WY64">メモ</option>
+                      <option value="WY65">テスト</option>
+                      <option value="WY66">kubernetes</option>
+                      <option value="WY67">jQuery</option>
+                      <option value="WY68">Bash</option>
+                      <option value="WY69">Heroku</option>
+                      <option value="WY70">Slack</option>
+                      <option value="WY71">Nuxt</option>
+                      <option value="WY72">oracle</option>
+                      <option value="WY73">pandas</option>
+                      <option value="WY74">Apache</option>
+                      <option value="WY75">Scala</option>
+                      <option value="WY76">centos7</option>
+                      <option value="WY77">VBA</option>
+                      <option value="WY78">Ansible</option>
+                      <option value="WY79">VirtualBox</option>
+                      <option value="WY80">npm</option>
                     </select>
                   </div>
                 </div>
