ベルマーク削除

--- a/T-CHAT-Question/T-CHAT-Question.html
+++ b/T-CHAT-Question/T-CHAT-Question.html
@@ -61,9 +61,9 @@
           </ul>
         </nav>
         <!-- ここからモーダルウィンドウ -->
-        <a href="javascript:void(0);" class="notification" onclick="showModal()"
+        <!-- <a href="javascript:void(0);" class="notification" onclick="showModal()"
           >🔔</a
-        >
+        > -->
 
         <!-- 半透明のオーバーレイ -->
         <div id="overlay" onclick="closeModal()"></div>
