Bug:閲覧数が0だと表示されないバグ修正

--- a/T-CHAT-Post/T-CHAT-Post.html
+++ b/T-CHAT-Post/T-CHAT-Post.html
@@ -191,7 +191,7 @@
                       <option value="WY29">Angular</option>
                       <option value="WY30">MachineLearning</option>
                       <option value="WY31">Chrome</option>
-                      <option value="WY32">AWS</option>
+                      <option value="WY32">Amazon</option>
                       <option value="WY33">PHP</option>
                       <option value="WY34">Unity</option>
                       <option value="WY35">Mac</option>
