Homeタグを押したら一生同じページに固定されるバグ修正

--- a/T-CHAT-Home.html
+++ b/T-CHAT-Home.html
@@ -37,6 +37,17 @@
   </head>
 
   <body id="body" style="display: none">
+    <div
+      id="invisibleClickArea"
+      style="
+        position: absolute;
+        width: 90px;
+        height: 90px;
+        top: 10px;
+        left: 10px;
+        opacity: 0;
+      "
+    ></div>
     <div class="background">
       <header>
         <div class="logo">
