--- a/T-CHAT-Post/T-CHAT-Post.html
+++ b/T-CHAT-Post/T-CHAT-Post.html
@@ -63,7 +63,7 @@
           <div class="logo">
             <img src="../T-CHAT-Image/T-CHAT_icon.png" alt="Your Image" />
           </div>
-          <button class="save" id="save">
+          <button class="save" id="save" hidden>
             <i class="fa-solid fa-floppy-disk"></i>
             Save
           </button>
