--- a/T-CHAT-Signin/T-CHAT-Signin.html
+++ b/T-CHAT-Signin/T-CHAT-Signin.html
@@ -62,19 +62,19 @@
         <input type="password" id="password" placeholder="パスワード" name="password" required />
         <i id="eye" class="fa-solid fa-eye"></i>
         <!-- 目のアイコン -->
-
+        <p></p>
         <p class="rule">※半角英字、数字、記号を組み合わせて6文字以上で入力してください。</p>
         <p class="rule2">※ただし記号は、 !  $  -  ?  # しか使えません。</p>
 
         <p class="signin">もしT-CHATのアカウントを持っている場合は<a href="../T-CHAT-Login/T-CHAT-Login.html">ログイン</a>から。</p>
 
-        <button type="button" class="submit" id="register_button" onclick="validateLogin()">登録する</button>
+        <button type="button" class="submit" id="register_button">登録する</button>
       </form>
 
       <p id="loginResult" style="display: none;"></p>
       <!-- idだけ欲しかったから -->
 
-      <!-- <p id="error-message"></p> -->
+      <p id="error-message"></p>
     </div>
     <script src="T-CHAT-Signin.js"></script>
 </body>
