--- a/T-CHAT-Post/T-CHAT-Post.html
+++ b/T-CHAT-Post/T-CHAT-Post.html
@@ -135,10 +135,12 @@
                       <option value="AM">初心者</option>
                       <option value="AN">開発</option>
                       <option value="AK">Android</option>
+                      <option value="AK1">Bug</option>
                       <option value="AZ">Java</option>
                       <option value="AR">C言語</option>
                       <option value="CA">C++</option>
                       <option value="CO">JavaScript</option>
+                      <option value="CO1">Python</option>
                       <option value="CT">Node.js</option>
                       <option value="DE">jQuery</option>
                       <option value="FL">Vue.js</option>
